@@ -1,12 +1,0 @@
-touch {
-    DEFINES   += WITH_TOUCH
-
-    SOURCES   += \
-        src/touch/clickfilter.cpp \
-        src/touch/slidingstackedwidget.cpp
-
-    HEADERS += \
-        src/touch/clickfilter.h \
-        src/touch/slidingstackedwidget.h \
-        src/touch/slidingstackedwidget_p.h
-}
