@@ -1,3 +1,9 @@
+beryllium (1.2.0) debian;
+
+  * Multiple video sources. No more non-touch version.
+
+ -- Pavel Bludov <pbludov@gmail.com>  Fri, 05 Dec 2014 15:00:00 +0800
+
 beryllium (1.1.6) debian;
 
   * All files, scheduled for removal, now got removed before uplading to DICOM.
